force-app/main/default/objects/msf_WorkingHoursCanvasser__c/msf_WorkingHoursCanvasser__c.object-meta.xml
<CustomObject>
    <label>Horas trabajadas por captador</label>
    <nameField>
        <displayFormat>HT-{00000}</displayFormat>
        <label>Nombre</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Horas trabajadas por captadores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>