force-app/main/default/objects/msf_WorkingHoursCanvasser__c/fields/msf_CampaignId__c.field-meta.xml
<CustomField>
    <fullName>msf_CampaignId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Id de Campaña</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Horas trabajadas por captadores</relationshipLabel>
    <relationshipName>Horas_trabajadas_por_captadores</relationshipName>
    <type>Lookup</type>
</CustomField>