force-app/main/default/objects/msf_WorkingHoursCanvasser__c/fields/msf_CanvasserId__c.field-meta.xml
<CustomField>
    <fullName>msf_CanvasserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Captador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Horas_trabajadas_por_captadores</relationshipName>
    <type>Lookup</type>
</CustomField>