force-app/main/default/objects/msf_WorkingHoursCanvasser__c/fields/msf_Hours__c.field-meta.xml
<CustomField>
    <fullName>msf_Hours__c</fullName>
    <label>Horas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>