force-app/main/default/objects/msf_WorkingHoursCanvasser__c/fields/msf_StartDate__c.field-meta.xml
<CustomField>
    <fullName>msf_StartDate__c</fullName>
    <label>Fecha de inicio de semana</label>
    <type>Date</type>
</CustomField>