force-app/main/default/objects/msf_WorkingHoursCanvasser__c/fields/msf_Team__c.field-meta.xml
<CustomField>
    <fullName>msf_Team__c</fullName>
    <label>Equipo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>