force-app/main/default/objects/msf_WorkingHoursCanvasser__c/fields/msf_TeamPromoter__c.field-meta.xml
<CustomField>
    <fullName>msf_TeamPromoter__c</fullName>
    <label>Promotor del equipo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>