force-app/main/default/objects/msf_WorkingHoursCanvasser__c/listViews/MSF_Horas_por_Captador.listView-meta.xml
<ListView>
    <fullName>MSF_Horas_por_Captador</fullName>
    <columns>NAME</columns>
    <columns>msf_CanvasserId__c</columns>
    <columns>msf_StartDate__c</columns>
    <columns>msf_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <label>Horas por Captador</label>
</ListView>